# Agents_On_The_Fly

./: .env.example  .gitignore  README.md  config.toml  main.py  pyproject.toml  requirements.txt  run_api.py  run_ui.py
api/: __init__.py  app.py  events.py
flyagent/: __init__.py  config.py  ictm.py  llm.py  logging_setup.py  orchestrator.py  subagent.py
flyagent/prompts/: __init__.py  orchestrator.py  subagent.py
flyagent/sandbox/: __init__.py  manager.py
flyagent/tools/: __init__.py  arxiv_tool.py  datetime_tool.py  file_edit.py  file_list.py  file_ops.py  grep_tool.py  news_search.py  python_exec.py  shell_exec.py  web_fetch.py  web_search.py  wikipedia_tool.py
tests/: test_sandbox_security.py
ui/: index.html
